# git-config

./: .gitignore  dashmasternodetool.dmt  initNvim.sh  tmux.conf
keymouse/: QWERTY - FN Blue - Copy.keymouselayout  config.ini  config.json
nvim/: cpp.vim  haskell.vim  init.lua  init.vim  lazy-lock.json
nvim/after/ftplugin/: cpp.vim
nvim/after/plugin/: bufferline.lua  fzf.lua  lsp.lua
nvim/lsp/: basedpyright.lua  clangd.lua  luals.lua  metta_lsp.lua
nvim/lua/config/: init.lua  metta.lua  remap.lua  set.lua
nvim/lua/plugins/: 99.lua  aider.lua  blinkcmp.lua  bufferline.lua  catppuccin.lua  comment.lua  commitReminder.lua  floaterm.lua  fzf.lua  gp.lua  init.lua  lazydev.lua  lazygit.lua  leap.lua  lsp-zero.lua  matchup.lua  navi.lua  neoscroll.lua  nvimtree.lua  oil.lua  project.lua  tasks.lua  telescope.lua  treesitter.lua  trouble.lua  undotree.lua
old/: cjdroute.conf  vimperatorrc  xmobarrc  xmonadrc
old/xmonad/: build  myxmonad.cabal  stack.yaml  xmonad.errors  xmonad.hi  xmonad.hs
